--- a/mobile/src/app/pages/cart/cart.page.html
+++ b/mobile/src/app/pages/cart/cart.page.html
@@ -11,7 +11,7 @@
       <ion-icon class="emptyimg" src="assets/empty-cart.svg"></ion-icon>
       <p class="one">Your cart is empty!</p>
       <p class="two">Look like you haven't added anything to your cart yet</p>
-      <ion-button routerLink="/pages/home">START SHOPPING</ion-button>
+      <ion-button routerLink="/pages/hometab">START SHOPPING</ion-button>
     </div>
     <ion-grid>
       
