--- a/mobile/src/app/pages/detailspage/detailspage.page.html
+++ b/mobile/src/app/pages/detailspage/detailspage.page.html
@@ -1,9 +1,18 @@
-
+<ion-header  class="ion-no-border" >
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
 
   <ion-grid>
     <ion-row>
       <ion-col>
+        <div class="discount" *ngIf="item.discount>0">
+          {{item.discount+'%'}}
+        </div>
         <div class="product-img">
           <img src = {{item.img}}/>
         </div>
@@ -77,8 +86,7 @@
         EGP {{ calculateTotalPrice() | number:'1.2-2' }}
       </div>
     </div>
-    <div class="btn">
-      <app-addcart-btn [item]="item"></app-addcart-btn>
-    </div>
+   
+      <app-addcart-btn class="btn" [item]="item"></app-addcart-btn>
   </div>
 </ion-footer>
