--- a/mobile/src/app/pages/detailspage/detailspage.page.scss
+++ b/mobile/src/app/pages/detailspage/detailspage.page.scss
@@ -1,3 +1,6 @@
+.back-button-wrapper {
+    z-index: 999; /* Set a higher z-index for the back button */
+  }
 ion-content {
 --padding-top: 0px;
 --padding-start: 0px;
@@ -32,6 +35,7 @@ ion-button {
   width: 100%;
   overflow: hidden;
   border-radius: 0px 0px 25px 25px;
+  position: relative;;
 
   img {
     width: 100%;
@@ -40,6 +44,20 @@ ion-button {
     border-radius: 0px 0px 25px 25px;
     border: 3px solid #fff;
   }
+}
+.discount{
+    position: absolute;
+    right: 0;
+    margin-top: 0.5rem;
+    margin-right: 0.7rem;
+    z-index: 1;
+    width: 40px;
+    border-radius: 10px;
+    background-color: rgba(179, 6, 6, 0.693);
+    color: white;
+    text-align: center;
+    font-weight: 400;
+    padding: 2px;
 }
 
 @media (min-width: 768px) {
@@ -94,8 +112,8 @@ display: flex;
 flex-direction: column;
 gap: 10px;
 .item-price{
-    font-size: 16px;
-    color: #7C7C7C;
+    font-size: 18px;
+    color: #4e4e4e;
 }
 }
 
@@ -106,8 +124,8 @@ padding: 15px 0 5px 0;
 .price{
     font-family: 'Gilroy-Bold', Helvetica;
     font-weight: bold;
-    font-size: 24px;
-    }
+    font-size: 20px;
+}
 
 .wrapper-3{
 padding: 10px 5px 10px 5px;
@@ -140,6 +158,7 @@ padding: 10px 5px 10px 5px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width:40%;
 }
 .total-wrapper .title{
     width:max-content;
@@ -167,17 +186,14 @@ padding: 10px 5px 10px 5px;
     
 }
 
-.total-wrapper .price {
-  font-size: 20px;
-}
 .btn{
     width: 100%;
-    ion-button{
-        --padding-top: 12px;
-        --padding-bottom: 12px;
+    .itemadd ion-button{
+        --ion-padding-top:20px;
+        --ion-padding-bottom:20px;
     }
-    
 }
+    
 .footer-md, .footer-ios {
     -webkit-box-shadow: 0px -2px 22px rgba(50, 50, 50, 0.3);
     -moz-box-shadow: 0px -2px 22px rgba(50, 50, 50, 0.3);
