--- a/mobile/src/app/pages/hometab/hometab.page.html
+++ b/mobile/src/app/pages/hometab/hometab.page.html
@@ -24,7 +24,7 @@
     <ion-row>
       <ion-col>
         <ion-item lines="none" class="titleslot ion-no-padding">
-          <h1 slot="start" class="title">Categories</h1>
+          <div slot="start" class="title">Categories</div>
           <span slot="end" class="seeall">See All</span>
         </ion-item>
       </ion-col>
@@ -32,7 +32,7 @@
     <ion-row>
       <ion-col class="categrow" size="auto">
         <div class="scroll" >
-          <div class="catname"  *ngFor="let category of categories" (click) ="routetoproduct(category.id)">
+          <div class="catname"  *ngFor="let category of categories" (click) ="routetoproduct(category)">
             <div>
                {{category.name}}
             </div>
@@ -45,7 +45,7 @@
     <ion-row class="itemsrow">
       <ion-col size="12">
         <ion-item lines="none" class="titleslot ion-no-padding">
-          <h1 slot="start" class="title">Trending</h1>
+          <div slot="start" class="title">Trending</div>
           <span slot="end" class="seeall">See All</span>
         </ion-item>
           
@@ -72,7 +72,7 @@
     <ion-row class="itemsrow">
       <ion-col size="12">
         <ion-item lines="none" class="titleslot ion-no-padding">
-          <h1 slot="start" class="title">Sale</h1>
+          <div slot="start" class="title">Sale</div>
           <span slot="end" class="seeall">See All</span>
         </ion-item>
         <div class="scroll" *ngIf="!isLoading">
