--- a/mobile/src/app/pages/hometab/hometab.page.scss
+++ b/mobile/src/app/pages/hometab/hometab.page.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     position: relative; /* Aligns items vertically in the center */
-  }
+}
   
   .search-container {
     flex-grow: 1; /* Allows the search container to take up available space */
@@ -108,6 +108,8 @@ swiper-slide {
     border-radius: 20px;
 }
 
-
+.title{
+  font-weight: 600;
+}
 
   
