--- a/mobile/src/app/pages/detailspage/detailspage.page.html
+++ b/mobile/src/app/pages/detailspage/detailspage.page.html
@@ -15,11 +15,14 @@
         </div>
         <div class="product-img">
           <img src = {{item.img}}/>
+          
         </div>
       </ion-col>
     </ion-row>
     <ion-row class="outer-wrapper">
       <ion-col size-md="12" >
+        
+        <div class="egypt" *ngIf="item.origin ==='Egypt'">100% Egyptian</div>
         <ion-item class="wrapper-1">
           <div class="item">
             <div class="item-name">{{item.name}}</div>
