--- a/mobile/src/app/pages/hometab/hometab.page.html
+++ b/mobile/src/app/pages/hometab/hometab.page.html
@@ -92,6 +92,33 @@
         
       </ion-col>
     </ion-row>
+    <ion-row class="itemsrow">
+      <ion-col size="12">
+        <ion-item lines="none" class="titleslot ion-no-padding">
+          <div slot="start" class="title">100% Egyptian Products</div>
+          <span slot="end" class="seeall">See All</span>
+        </ion-item>
+          
+        <div class="scroll" *ngIf="!isLoading">
+          <div class="skelItem" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]">
+            <ion-skeleton-text animated class="skeleton-image"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 70%"></ion-skeleton-text>
+          </div>
+          
+         
+        </div>
+          
+        
+        <div class="scroll" *ngIf="isLoading">
+
+          <div class="itemdiv" *ngFor="let origin of egypt" >
+            <app-product-card [item]="origin" [style]="'home'"></app-product-card>
+          </div>
+        </div>
+        
+      </ion-col>
+    </ion-row>
     
   </ion-grid>
 </ion-content>
