--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -6,7 +6,8 @@
 
 <ion-content class="ion-padding" [fullscreen]="true">
   <div class="profile-container">
-    <div *ngIf="userInfo.loginstatus === 1" class="userprofile">
+    
+    <div *ngIf="userInfo.loginstatus == 1" class="userprofile">
     <div class="profile-header">
       <div class="profile-image"> 
         <img *ngIf="userInfo.photo" [src]="userInfo.photo" alt="User Photo" class="profile-image">
@@ -52,7 +53,7 @@
       Log Out
     </ion-button>
   </div>
-  <div *ngIf="userInfo.length === 13" class="container">
+  <div *ngIf="userInfo.length == 13" class="container">
     <div class="icon-inner">
       <img class="no-user-icon" slot="icon-only" src="assets/download.png"/>
     </div>
