--- a/mobile/src/app/login/login.page.html
+++ b/mobile/src/app/login/login.page.html
@@ -52,10 +52,10 @@
         <div class="text">Or Login in with social account</div>
         <div class="social">
           <ion-button class="social-btn" id="google">
-            <ion-icon slot="icon-only" src="assets/icon/google.svg"></ion-icon>
+            <ion-icon slot="icon-only" src="assets/google.svg"></ion-icon>
           </ion-button>
           <ion-button class="social-btn" id="facebook">
-            <ion-icon slot="icon-only" src="assets/icon/facebook.svg"></ion-icon>
+            <ion-icon slot="icon-only" src="assets/facebook.svg"></ion-icon>
           </ion-button>
         </div>
       </ion-col>
