--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="ion-padding" [fullscreen]="true">
   <div class="profile-container">
-    <div *ngIf="userInfo.loginstatus === 1" class="userprofile">
+  
     <div class="profile-header">
       <div class="profile-image"> 
         <img *ngIf="userInfo.photo" [src]="userInfo.photo" alt="User Photo" class="profile-image">
@@ -51,8 +51,8 @@
     <ion-button  class="logout-button" (click)="logout()" expand="block" fill="outline" shape="round">
       Log Out
     </ion-button>
-  </div>
-  <div *ngIf="userInfo.length === 13" class="container">
+  
+  <div *ngIf="userInfo.length >0" class="container">
     <div class="icon-inner">
       <img class="no-user-icon" slot="icon-only" src="assets/download.png"/>
     </div>
