--- a/mobile/src/app/components/address-change/address-change.component.html
+++ b/mobile/src/app/components/address-change/address-change.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="cancel()">Cancel</ion-button>
+    </ion-buttons>
     <ion-title>Change Address</ion-title>
   </ion-toolbar>
 </ion-header>
