--- a/mobile/src/app/pages/detailspage/detailspage.page.scss
+++ b/mobile/src/app/pages/detailspage/detailspage.page.scss
@@ -1,53 +1,27 @@
 .back-button-wrapper {
-    z-index: 999; /* Set a higher z-index for the back button */
+    z-index: 999; 
   }
-ion-content {
---padding-top: 0px;
---padding-start: 0px;
---padding-end: 0px;
-}
-
-ion-grid{
+ion-grid, ion-col{
 padding:0px;
-}
-ion-col{
-padding: 0px;
 }
 .egypt{
     position: absolute;
     right: 0;
     width: max-content;
     height: max-content;
-    z-index: 999;
     font-weight: 600;
-}
-.item .item-name {
-font-size: 20px;
-font-weight: bold;  
-}
-
-p {
-font-size: 14px;
 }
 
 ion-icon {
 font-size: 20px;
 }
 
-ion-button {
---border-radius: 10px;
-}
-
 .product-img {
   height: 40vh;
   width: 100%;
-  overflow: hidden;
-  border-radius: 0px 0px 25px 25px;
+  border-radius:25px;
   position: relative;
-
   img {
-    width: 100%;
-    height: 100%;
     object-fit: contain;
     border-radius: 0px 0px 25px 25px;
     border: 3px solid #fff;
@@ -69,50 +43,28 @@ ion-button {
     font-weight: 400;
     padding: 2px;
 }
-
-@media (min-width: 768px) {
-ion-content {
-    --padding-top: 64px;    
-}
-
 .item .item-name {
     font-size: 24px;
+    font-weight: bold;          
 }
-
-p {
-    font-size: 16px; 
-}
-
-ion-icon {
-    font-size: 24px;
-}
-}
-
-
 .quantity{
 position: relative;
 display: flex;
-flex-direction: row;
 gap: 20px;
 text-align: center;
 align-items: center;
-align-self: center;
 }
-
-
 .rectangle {
 width: 46px;
 height: 46px;
 border-radius: 17px;
 border: 1px solid #E2E2E2;
 display: flex;
-  justify-content: center;
-  align-items: center;
-    
+justify-content: center;
+align-items: center;
 }
 .outer-wrapper{
 padding:15px;
-
 }
 .wrapper-1{
 padding: 15px 0 5px 0;
@@ -131,7 +83,6 @@ gap: 10px;
 
 .wrapper-2{
 padding: 15px 0 5px 0;
-
 }
 .price{
     font-family: 'Gilroy-Bold', Helvetica;
@@ -147,7 +98,6 @@ padding: 10px 5px 10px 5px;
 }
 .content{
     font-family: "Gilroy-Medium", Helvetica;
-    font-weight: 400;
     color: #252525;
     font-size: 14px;
     padding-left: 15px;
@@ -158,11 +108,9 @@ padding: 10px 5px 10px 5px;
     top:0;
     width: 100%;
     height: 1px;
-    object-fit: cover;
 }
 .footer-wrapper{
     display: flex;
-    flex-direction: row;
     gap: 20px;
     align-items: center;
 }
@@ -171,68 +119,52 @@ padding: 10px 5px 10px 5px;
     flex-direction: column;
     gap: 10px;
     width:40%;
+    .title{
+        width:max-content;
+        color: #7c7c7c;
+        font-size: 14px;
+        font-weight: bold;
+    }
 }
-.total-wrapper .title{
-    width:max-content;
-    color: #7c7c7c;
-    font-size: 14px;
-    font-weight: bold;
-}
-
 .purchase-icon{
     width : 50px;
     height:auto;
     padding-left: 10px;
-
-
 }
 .purchase-container {
   display: flex;
   gap: 20px;
   align-items : center;
 }
-
 .purchase-count{
     font-size : 15px;
-    font-weight: bold;
-    
+    font-weight: bold;    
 }
 
 .btn{
     width: 100%;
-    .itemadd ion-button{
-        --ion-padding-top:20px;
-        --ion-padding-bottom:20px;
-    }
 }
     
 .footer-md, .footer-ios {
-    -webkit-box-shadow: 0px -2px 22px rgba(50, 50, 50, 0.3);
-    -moz-box-shadow: 0px -2px 22px rgba(50, 50, 50, 0.3);
     box-shadow: 0px -2px 22px rgba(50, 50, 50, 0.3);
     background-color: white !important;
     border-radius: 10px;
     padding: 20px;
 }
-
 .detail-list{
     font-family: "Gilroy-Medium", Helvetica;
     padding-left: 15px;
     margin: 0;
     color: #252525;
     font-size: 14px;
+    li { 
+        margin-bottom: 10px;
+    }
 }
-.detail-list li { 
-    margin-bottom: 10px;
-
-}
-
 .before{
-    text-decoration: line-through;   
+    text-decoration: line-through;
+    span{
+        padding: 2px 0;
+        font-size: 1em;
+    }   
 }
-
-.before >span{
-    padding: 2px 0;
-    font-size: 1em;
-}
-
