--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -53,7 +53,7 @@
       Log Out
     </ion-button>
   </div>
-  <div *ngIf="userInfo.loginstatus != 1" class="container">
+  <div *ngIf="userInfo.loginstatus == 13" class="container">
     <div class="icon-inner">
       <img class="no-user-icon" slot="icon-only" src="assets/download.png"/>
     </div>
