--- a/mobile/src/app/components/settings/settings.component.html
+++ b/mobile/src/app/components/settings/settings.component.html
@@ -1,8 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="cancel()">Cancel</ion-button>
-    </ion-buttons>
+    <div slot="start" (click)="cancel()">Cancel</div>
     <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
