--- a/mobile/src/app/pages/productspage/productspage.page.scss
+++ b/mobile/src/app/pages/productspage/productspage.page.scss
@@ -1,5 +1,5 @@
 ion-grid{
-    padding-left: 25px;
+    padding-left: 2em;
 }
 ion-col{
     width: 100%;
@@ -24,7 +24,7 @@ ion-range {
 
 .skeleton-image{
     height: 11rem;
-    width:  10.5rem;
+    width:  10rem;
     border-radius: 20px;
 }
 .block{
