--- a/mobile/src/app/components/payment-method-change/payment-method-change.component.html
+++ b/mobile/src/app/components/payment-method-change/payment-method-change.component.html
@@ -1,9 +1,7 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="cancel()">Cancel</ion-button>
-    </ion-buttons>
+    <div slot="start" (click)="cancel()">Cancel</div>
     <ion-title>Change Payment Method </ion-title>
   </ion-toolbar>
 </ion-header>
