--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -11,7 +11,7 @@
         <img *ngIf="userInfo.photo" [src]="userInfo.photo" alt="User Photo" class="profile-image">
       </div>
       <div class="profile-info">
-        <h2 class="profile-name">{{userInfo.firstname}} {{userInfo.lastname}}</h2>
+        <h2 class="profile-name">{{userInfo.username}}</h2>
         <p class="profile-email">{{userInfo.email}}</p>
       </div>
     </div>
