--- a/mobile/src/app/pages/productspage/productspage.page.html
+++ b/mobile/src/app/pages/productspage/productspage.page.html
@@ -1,8 +1,7 @@
 <ion-header  class="ion-no-border" >
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
+
+    <ion-back-button slot="start"></ion-back-button>
     <ion-title *ngIf="ctgname">{{ctgname}}</ion-title>
 
     
